--- a/lib/UI/CMakeLists.txt
+++ b/lib/UI/CMakeLists.txt
@@ -5,23 +5,10 @@ project(UIcppLib)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# packages
-# find_package(OpenGL REQUIRED)
-find_package(glfw3 3.3 REQUIRED)
-find_package(GLEW REQUIRED)
-find_package(glm REQUIRED)
 
 set(OUTDIR ${CMAKE_CURRENT_SOURCE_DIR}/../../build/lib)
 
-# add Zig exe (ShaderLoader)
-# add_custom_command(
-#     OUTPUT ${OUTDIR}/libShaderLoader.dylib
-#     COMMAND zig build-lib ${CMAKE_CURRENT_SOURCE_DIR}/ShaderLoader.zig -dynamic -fPIC -femit-bin=${OUTDIR}/libShaderLoader.dylib
-#     DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/ShaderLoader.zig
-#     COMMENT "Building ShaderLoader Zig Library"
-# )
 
-# add_custom_target(ComptimeSL ALL DEPENDS ${OUTDIR}/libShaderLoader.dylib)
 # include directories
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}
@@ -30,21 +17,20 @@ include_directories(
 )
 
 set(WM_SOURCES
-    WindowManager/WM.cpp
+    WindowManager/WM.mm
     WindowManager/WMWrapper.cpp
-    Renderer/Renderer.cpp
-    Renderer/Model/ModelManager.cpp
-    Renderer/Model/Rect.cpp
+    # Renderer/Renderer.cpp
+    # Renderer/Model/ModelManager.cpp
+    # Renderer/Model/Rect.cpp
 )
 
 
 add_library(WM SHARED ${WM_SOURCES})
 
-# add_dependencies(WM ComptimeSL)
-
 target_link_libraries(WM 
-    glfw GLEW::GLEW glm::glm 
-    # ${OUTDIR}/libShaderLoader.dylib
+    "-framework Metal"
+    "-framework QuartzCore"
+    "-framework Cocoa"
 )
 
 set_target_properties(WM PROPERTIES
@@ -53,11 +39,8 @@ set_target_properties(WM PROPERTIES
 )
 
 add_definitions(-DSHADER_DIR="${CMAKE_CURRENT_SOURCE_DIR}/Shaders/")
-add_definitions(-DV_SHADER="${CMAKE_CURRENT_SOURCE_DIR}/Shaders/Vertex.glsl")
-add_definitions(-DF_SHADER="${CMAKE_CURRENT_SOURCE_DIR}/Shaders/Fragment.glsl")
 
 # Add compiler flags for Clang/GCC
-# if(CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID STRENGTH "GNU")
+if(CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     target_compile_options(WM PRIVATE -fdeclspec)
-    # target_compile_options(gl PRIVATE -fdeclspec)
-# endif()
+endif()
